--- a/code/dev/parts/domains/edit.html
+++ b/code/dev/parts/domains/edit.html
@@ -570,11 +570,11 @@
               </div>
               <hr>
             </uib-tab>
-             <uib-tab index="7" popover-append-to-body="{{true}}" popover-trigger="mouseenter" _uibpopover="TODO text">
+             <uib-tab index="7" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="This tab is used to manage Web Application Firewall (WAF) settings for the domain">
               <!--  “WAF” -->
               <uib-tab-heading>WAF</uib-tab-heading>
               <div class="form-group form-inline">
-                <label for="enableWafRules" class="col-sm-3 control-label">Enable WAF Functionality For The Domain</label>
+                <label for="enableWafRules" class="col-sm-3 control-label">WAF Protection</label>
                 <div class="col-md-9">
                   <toggle-switch id="enable_waf_rules" name="enableWafRules" is-disabled="_loading" ng-model="model.rev_component_bp.enable_waf" on-label="On" off-label="Off">
                   </toggle-switch>
