Update Usage Report - show 'Lua Feature'

--- a/code/dev/parts/reports/usage-web/usage-web__domains.tpl.html
+++ b/code/dev/parts/reports/usage-web/usage-web__domains.tpl.html
@@ -45,6 +45,13 @@
   </div>
 
   <div class="form-group">
+    <label class="col-sm-6 control-label">Lua Feature Enabled</label>
+    <div class="col-sm-6">
+      <div class="form-control text-right">{{ report.domains.total_lua_feature}}</div>
+    </div>
+  </div>
+
+  <div class="form-group">
     <label class="col-sm-6 control-label">Cache Purge Commands</label>
     <div class="col-sm-6">
       <div class="form-control text-right">{{ report.total_object_purge_commands}}</div>
