--- a/code/dev/parts/domains/domain-waf-locations/domain-waf-locations.tpl.html
+++ b/code/dev/parts/domains/domain-waf-locations/domain-waf-locations.tpl.html
@@ -11,10 +11,14 @@
     <div class="form-group pull-right">
       <div class="col-sm-12">
         <a id="addNewWAFLocationBtn" ng-click="$ctrl.onAddNewWAFLocation(true)" class="btn btn-primary btn-sm " title="Add New WAF Location"
-          opover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Add New WAF Location"><i class="glyphicon glyphicon-plus"></i></a>
+          opover-append-to-body="{{true}}" popover-trigger="mouseenter" popover-placement=" left" uib-popover="Add New WAF Location"><i class="glyphicon glyphicon-plus"></i></a>
       </div>
     </div>
-    <h4><b> Locations </b></h4>
+    <div class="h4 panel-title"><b class="h4  inline-block"> Locations </b>
+      <label class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text">
+                <i class="fa fa-question-circle"></i>
+              </label>
+    </div>
   </div>
   <div class="panel panel-body">
     <div class="form-group" ng-form="locationEditForm">
@@ -23,11 +27,13 @@
           <div class="domain-waf-location__info">
             <div class="pull-left panel-buttons-left">
               <!-- collapse -->
-              <a class="btn btn-default btn-xs" href="" title="Collapse WAF Location" ng-show="!item.$$wafLocationBlockState.isCollapsed" ng-click="item.$$wafLocationBlockState.isCollapsed = !item.$$wafLocationBlockState.isCollapsed">
+              <a class="btn btn-default btn-xs" href="" title="Collapse WAF Location" ng-show="!item.$$wafLocationBlockState.isCollapsed"
+                ng-click="item.$$wafLocationBlockState.isCollapsed = !item.$$wafLocationBlockState.isCollapsed">
                 <i class="glyphicon glyphicon-chevron-up"></i>
               </a>
               <!-- expend -->
-              <a class="btn btn-default btn-xs" href="" title="Expand WAF Location" ng-show="item.$$wafLocationBlockState.isCollapsed" ng-click="item.$$wafLocationBlockState.isCollapsed = !item.$$wafLocationBlockState.isCollapsed">
+              <a class="btn btn-default btn-xs" href="" title="Expand WAF Location" ng-show="item.$$wafLocationBlockState.isCollapsed"
+                ng-click="item.$$wafLocationBlockState.isCollapsed = !item.$$wafLocationBlockState.isCollapsed">
                 <i class="glyphicon glyphicon-chevron-down"></i>
               </a>
               <!-- WAF Location Up  -->
@@ -37,7 +43,7 @@
               <!-- // -->
             </div>
             <div class="pull-right panel-button-right">
-               <div class="location-panel-into--totals inline-block">Rules:<strong> {{item.waf_rules.length}}</strong>, Actions: <strong>{{item.waf_actions.length}}</strong> </div>
+              <div class="location-panel-into--totals inline-block">Rules:<strong> {{item.waf_rules.length}}</strong>, Actions: <strong>{{item.waf_actions.length}}</strong> </div>
               <!-- Actions -->
               <a ng-click="$ctrl.onDuplicateWAFLocation($event,item)" class="btn btn-primary btn-xs duplicateWAFLocationBtn" opover-append-to-body="{{true}}"
                 popover-trigger="mouseenter" uib-popover="Duplicate WAF Location"><i class="fa fa-clone"></i> Duplicate Location</a>
@@ -46,9 +52,9 @@
               </a>
             </div>
             <div class="panel-title">
-                <b>Location</b>: {{item.location}}</div>
-            </div>
+              <b>Location</b>: {{item.location}}</div>
           </div>
+        </div>
 
         <div class="panel-body" ng-show="!item.$$wafLocationBlockState.isCollapsed">
 
