Added proper tooltip for WAF Locations block

--- a/code/dev/parts/domains/domain-waf-locations/domain-waf-locations.tpl.html
+++ b/code/dev/parts/domains/domain-waf-locations/domain-waf-locations.tpl.html
@@ -15,7 +15,7 @@
       </div>
     </div>
     <div class="h4 panel-title"><b class="h4  inline-block"> Locations </b>
-      <label class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text">
+      <label class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="It is possible to configuration different WAF settings for different parts (locations) of the website. The default root location (/) covers the whole website. You can configure separate locations like /images/, /admin/, etc.">
                 <i class="fa fa-question-circle"></i>
               </label>
     </div>
