--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -120,8 +120,8 @@
             Security Analytics
             <i ng-click="expandMenu('index.security', $event)" class="pull-right {{ menuExpanded('index.security') ? 'fa fa-caret-up' : 'fa fa-caret-down' }}"></i>
           </a>
-          <a id="side-menu-sub-item__waf-analytics" style="color:grey"  ui-sref-active="active" uisref="index.security.waf_analytics" class="side-menu-sub-item">
-            <i class="sub-menu-icon fa fa-area-chart"></i> WAF Analytics<i class="fa fa-hourglass-half comming-soon" aria-hidden="true" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Coming Soon "></i>
+          <a id="side-menu-sub-item__waf-analytics" ui-sref-active="active" ui-sref="index.security.waf_analytics" class="side-menu-sub-item">
+            <i class="sub-menu-icon fa fa-area-chart"></i> WAF Analytics
           </a>
           <a id="side-menu-sub-item__waf-events" style="color:grey"  ui-sref-active="active" uisref="index.security.waf_events" class="side-menu-sub-item">
             <i class="sub-menu-icon fa fa-area-chart"></i> WAF Events<i class="fa fa-hourglass-half comming-soon" aria-hidden="true" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Coming Soon "></i>
