--- a/code/dev/parts/waf-analytics/waf-analytics.tpl.html
+++ b/code/dev/parts/waf-analytics/waf-analytics.tpl.html
@@ -6,14 +6,46 @@
       </h2>
     </div>
   </div>
+  <!-- First section-->
   <div class="row">
     <div class="col-md-12">
       <div class="panel panel-default">
+        <div class="panel-heading">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="pull-left">
+                <form class="form-inline">
+                  <div class="form-group">
+                    <div domain-select id="domain" ng-model="domain" on-select="onDomainSelected()" select-one="true"></div>
+                  </div>
+                  <div class="form-group">
+                    <time-note-display></time-note-display>
+                  </div>
+                </form>
 
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="panel-body">
-          <label> Coming soon! </label>
+          <!-- Internal blocks -->
+
+          <div class="panel panel-default">
+            <!--<div class="panel-body waf-analytics" ng-include="'/parts/waf-analytics/waf-analytics/top-charts.tpl.html'"></div>-->
+            <div class="panel-body" ng-include="'/parts/waf-analytics/waf-analytics/security-events.tpl.html'"> </div>
+            <!--<div class="panel-body" ng-include="'/parts/waf-analytics/waf-analytics/top-attacked.tpl.html'">
+            </div>-->
+            <!-- Second section -->
+            <!--<div class="panel panel-default">
+              <div class="panel-body" ng-include="'/parts/waf-analytics/waf-analytics/security-events.tpl.html'"> </div>
+            </div>-->
+            <!-- Third section -->
+            <!--<div class="panel panel-default">
+            <div class="panel-body" ng-include="'/parts/waf-analytics/waf-analytics/top-attacked.tpl.html'">
+              <label>Loading.. </label>
+            </div>
+          </div>-->
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</div>
