Save WAF Analytics - Tops

--- a/code/dev/parts/waf-analytics/waf-analytics.tpl.html
+++ b/code/dev/parts/waf-analytics/waf-analytics.tpl.html
@@ -31,20 +31,12 @@
           <!-- Internal blocks -->
 
           <div class="panel panel-default">
-            <!--<div class="panel-body waf-analytics" ng-include="'/parts/waf-analytics/waf-analytics/top-charts.tpl.html'"></div>-->
+            <div class="panel-body waf-analytics" ng-include="'/parts/waf-analytics/waf-analytics/top-charts.tpl.html'"></div>
+            <!-- Second section -->
             <div class="panel-body" ng-include="'/parts/waf-analytics/waf-analytics/security-events.tpl.html'"> </div>
+            <!-- Third section -->
             <!--<div class="panel-body" ng-include="'/parts/waf-analytics/waf-analytics/top-attacked.tpl.html'">
             </div>-->
-            <!-- Second section -->
-            <!--<div class="panel panel-default">
-              <div class="panel-body" ng-include="'/parts/waf-analytics/waf-analytics/security-events.tpl.html'"> </div>
-            </div>-->
-            <!-- Third section -->
-            <!--<div class="panel panel-default">
-            <div class="panel-body" ng-include="'/parts/waf-analytics/waf-analytics/top-attacked.tpl.html'">
-              <label>Loading.. </label>
-            </div>
-          </div>-->
           </div>
         </div>
       </div>
