--- a/code/dev/parts/waf-analytics/waf-analytics/top-charts.tpl.html
+++ b/code/dev/parts/waf-analytics/waf-analytics/top-charts.tpl.html
@@ -3,7 +3,7 @@
      ng-disabled="!ngDomain"
      ng-domain="domain"
      ng-filters="filtersTops"
-     on-filter="reloadTops()" > </div>
+     on-filter="reloadTops(domain)"> </div>
 <div class="col-md-4 graph">
   <h3 class="graph-title">Top 20 Countries</h3>
   <div class="graph-container">
