--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -498,8 +498,11 @@
 <script type="text/javascript" src="js/portal/waf-analytics/wafAnalytics.routes.js"></script>
 <script type="text/javascript" src="js/portal/waf-analytics/controller/wafAnalytics.controller.js"></script>
 <script type="text/javascript" src="js/portal/waf-analytics/directives/wafSecurityEventsChart.directive.js"></script>
+<script type="text/javascript" src="js/portal/waf-analytics/directives/wafTopAttackedUrls.directive.js"></script>
+<script type="text/javascript" src="js/portal/waf-analytics/directives/wafTopAttackerIPs.directive.js"></script>
 <script type="text/javascript" src="js/portal/waf-analytics/filters/wafFilterSecurityEvents.directive.js"></script>
 <script type="text/javascript" src="js/portal/waf-analytics/filters/wafFilterTops.directive.js"></script>
+<script type="text/javascript" src="js/portal/waf-analytics/filters/wafFilterTopObjects.directive.js"></script>
 <!-- //WAF Analytics -->
 <script type="text/javascript" src="js/portal/app.module.js"></script>
 <script type="text/javascript" src="js/portal/app.config.js"></script>
