--- a/code/dev/parts/waf-analytics/waf-analytics.tpl.html
+++ b/code/dev/parts/waf-analytics/waf-analytics.tpl.html
@@ -29,14 +29,15 @@
         </div>
         <div class="panel-body">
           <!-- Internal blocks -->
-
           <div class="panel panel-default">
-            <div class="panel-body waf-analytics" ng-include="'/parts/waf-analytics/waf-analytics/top-charts.tpl.html'"></div>
+            <!-- First section -->
+            <div class="panel-body waf-analytics--top__container" ng-include="'/parts/waf-analytics/waf-analytics/top-charts.tpl.html'"></div>
+            <hr>
             <!-- Second section -->
-            <div class="panel-body" ng-include="'/parts/waf-analytics/waf-analytics/security-events.tpl.html'"> </div>
+            <div class="panel-body waf-analytics--security-events__container" ng-include="'/parts/waf-analytics/waf-analytics/security-events.tpl.html'"></div>
+            <hr>
             <!-- Third section -->
-            <!--<div class="panel-body" ng-include="'/parts/waf-analytics/waf-analytics/top-attacked.tpl.html'">
-            </div>-->
+            <div class="panel-body waf-analytics--attacks__container" ng-include="'/parts/waf-analytics/waf-analytics/top-attacked.tpl.html'"></div>
           </div>
         </div>
       </div>
