--- a/code/dev/parts/waf-analytics/waf-analytics/top-attacked.tpl.html
+++ b/code/dev/parts/waf-analytics/waf-analytics/top-attacked.tpl.html
@@ -1,18 +1,18 @@
-<div class="top-attacks">
-  <uib-tabset active="topActiveAttackerIP" justified="false" id="topAttacksTabs">
+<div class="waf-top-attacks">
+  <uib-tabset active="topAttackerIPs" justified="false" id="topAttacksTabs">
     <uib-tab index="topAttackedURLs" heading="Top Attacked URLs" select="isOpened['topAttackedURLs']=true">
       <div class="row">
         <div class="col-md-12">
-          <div ng-if="isOpened['topAttackedURLs']==true" fl-store-name='filterTopAttack' top-referer fl-os="os" fl-device="device"
-            fl-country="country" fl-browser="browser" ng-domain="domain"></div>
+          <div ng-if="isOpened['topAttackedURLs']==true" fl-store-name='filterTopAttack' waf-top-attacked-urls fl-country="countries"
+            ng-domain="domain"></div>
         </div>
       </div>
     </uib-tab>
-    <uib-tab index="topActiveAttackerIP" heading="Most Active Attacker IP Addresses" select="isOpened['topActiveAttackerIP']=true">
+    <uib-tab index="topAttackerIPs" heading="Most Active Attacker IP Addresses" select="isOpened['topAttackerIPs']=true">
       <div class="row">
         <div class="col-md-12">
-          <div ng-if="isOpened['topActiveAttackerIP']==true" fl-store-name='filterTopAttack' top-requests fl-os="os" fl-device="device"
-            fl-country="country" fl-browser="browser" ng-domain="domain"></div>
+          <div ng-if="isOpened['topAttackerIPs']==true" fl-store-name='filterTopAttack' waf-top-attacker-ips fl-country="countries"
+            ng-domain="domain"></div>
         </div>
       </div>
     </uib-tab>
