Add WAF Heatmap Page

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -497,6 +497,7 @@
 <script type="text/javascript" src="js/portal/waf-analytics/wafAnalytics.module.js"></script>
 <script type="text/javascript" src="js/portal/waf-analytics/wafAnalytics.routes.js"></script>
 <script type="text/javascript" src="js/portal/waf-analytics/controller/wafAnalytics.controller.js"></script>
+<script type="text/javascript" src="js/portal/waf-analytics/controller/wafHeatMap.controller.js"></script>
 <script type="text/javascript" src="js/portal/waf-analytics/directives/wafSecurityEventsChart.directive.js"></script>
 <script type="text/javascript" src="js/portal/waf-analytics/directives/wafTopAttackedUrls.directive.js"></script>
 <script type="text/javascript" src="js/portal/waf-analytics/directives/wafTopAttackerIPs.directive.js"></script>
