Update WAF Heatmap

--- a/code/dev/parts/waf-analytics/waf-heatmap/waf-heatmap.tpl.html
+++ b/code/dev/parts/waf-analytics/waf-heatmap/waf-heatmap.tpl.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid waf-heatmap">
   <div class="row">
     <div class="col-md-12">
       <h2>WAF Heatmap</h2>
