Update WAF Analytics - Request Zone Titles

--- a/code/dev/parts/waf-analytics/filters/waf-filter-security-events.tpl.html
+++ b/code/dev/parts/waf-analytics/filters/waf-filter-security-events.tpl.html
@@ -18,7 +18,7 @@
 
       <div class="form-group">
         <!-- TODO: FIX Style -->
-        <input type="number" class="form-control fixed" ng-model="ngFilters.rule_id" style="margin-bottom: 0px;" placeholder="WAF Rule ID">
+        <input type="number" class="form-control fixed" ng-model="ngFilters.rule_id" style="margin-bottom: 0px;" placeholder="Rule ID">
       </div>
 
 
