Add WAF Events table

--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -123,8 +123,8 @@
           <a id="side-menu-sub-item__waf-analytics" ui-sref-active="active" ui-sref="index.security.waf_analytics" class="side-menu-sub-item">
             <i class="sub-menu-icon fa fa-area-chart"></i> WAF Analytics
           </a>
-          <a id="side-menu-sub-item__waf-events" style="color:grey"  ui-sref-active="active" uisref="index.security.waf_events" class="side-menu-sub-item">
-            <i class="sub-menu-icon fa fa-area-chart"></i> WAF Events<i class="fa fa-hourglass-half comming-soon" aria-hidden="true" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="Coming Soon "></i>
+          <a id="side-menu-sub-item__waf-events" ui-sref-active="active" ui-sref="index.security.waf_events" class="side-menu-sub-item">
+            <i class="sub-menu-icon fa fa-area-chart"></i> WAF Events
           </a>
           <a id="side-menu-sub-item__waf-heatmaps" ui-sref-active="active" ui-sref="index.security.waf_heatmaps" class="side-menu-sub-item">
             <i class="sub-menu-icon fa fa-area-chart"></i> WAF Heatmaps
