--- a/code/dev/parts/waf-analytics/filters/waf-filter-security-events.tpl.html
+++ b/code/dev/parts/waf-analytics/filters/waf-filter-security-events.tpl.html
@@ -21,17 +21,24 @@
         <input type="number" class="form-control fixed" ng-model="ngFilters.rule_id" style="margin-bottom: 0px;" placeholder="Rule ID">
       </div>
 
-
-
       <div class="form-group">
         <select class="form-control fixed" ng-model="ngFilters.zone" ng-options="key as item for  (key ,item) in flZones">
           <option value="">All Zones</option>
         </select>
       </div>
+      <!-- Count per page -->
+      <div class="form-group" ng-show="isShowCount">
+        <select class="form-control fixed" popover-trigger="mouseenter" uib-popover="Number of count records to report" ng-model="ngFilters.count">
+          <option ng-selected="ngFilters.count==25" value="25">25</option>
+          <option ng-selected="ngFilters.count==50" value="50">50</option>
+          <option ng-selected="ngFilters.count==100" value="100">100</option>
+          <option ng-selected="ngFilters.count==200"  value="200">200</option>
+        </select>
+      </div>
 
       <div class="form-group">
-        <button class="btn btn-info" ng-click="updateFilters()">
-          <i class="glyphicon glyphicon-refresh"></i>&nbsp;
+        <button class="btn btn-info" ng-disabled="isLoading" ng-click="updateFilters()">
+         <i class="glyphicon glyphicon-refresh" ng-class="isLoading ? 'spin':''"></i>  &nbsp;
           Update Report
         </button>
       </div>
