--- a/code/dev/parts/waf-analytics/waf-events/waf-events.tpl.html
+++ b/code/dev/parts/waf-analytics/waf-events/waf-events.tpl.html
@@ -31,7 +31,7 @@
             <i class="glyphicon glyphicon-refresh spin" ng-if="vm._loading"></i>&nbsp; Loading...
           </div>
           <div ng-if="vm.totalItems>0" ng-disabled="vm._loading" uib-pagination total-items="vm.totalItems" ng-model="vm.currentPage" boundary-link-numbers="true"
-            force-ellipses="true" ng-change="vm.pageChanged()" max-size="10" items-per-page="vm.filters.count"></div>
+            force-ellipses="true" rotate="false" ng-change="vm.pageChanged()" max-size="10" items-per-page="vm.filters.count"></div>
 
           <table class="table ">
             <thead>
@@ -69,7 +69,7 @@
             </tbody>
           </table>
           <div ng-if="vm.totalItems>10" ng-disabled="vm._loading" uib-pagination total-items="vm.totalItems" ng-model="vm.currentPage"
-            boundary-link-numbers="true" force-ellipses="true" ng-change="vm.pageChanged()" max-size="10" items-per-page="vm.filters.count">
+            boundary-link-numbers="true" rotate="false"  force-ellipses="true" ng-change="vm.pageChanged()" max-size="10" items-per-page="vm.filters.count">
           </div>
         </div>
       </div>
