--- a/code/dev/parts/waf-analytics/directives/waf-top-attacker-ips.tpl.html
+++ b/code/dev/parts/waf-analytics/directives/waf-top-attacker-ips.tpl.html
@@ -13,7 +13,7 @@
       <thead>
         <tr>
           <th>IP Address</th>
-          <th style="width: 10%;">Count</th>
+          <th style="width: 10%;" class="text-right">Count</th>
         </tr>
       </thead>
       <tbody>
