--- a/code/dev/parts/waf-analytics/waf-heatmap/waf-heatmap.tpl.html
+++ b/code/dev/parts/waf-analytics/waf-heatmap/waf-heatmap.tpl.html
@@ -1,7 +1,7 @@
 <div class="container-fluid waf-heatmap">
   <div class="row">
     <div class="col-md-12">
-      <h2>WAF Heatmap</h2>
+      <h2 class="page-title">WAF Heatmap</h2>
     </div>
   </div>
 
@@ -25,7 +25,7 @@
                 <form class="form-inline">
                   <div class="form-group">
                     <select class="form-control fixed"
-                            ng-model="delay">
+                            ng-model="delay" id="delay">
                       <option value="1">Last 1 Hour</option>
                       <option value="6">Last 6 Hours</option>
                       <option value="12">Last 12 Hours</option>
