Set tooltip “Number of WAF events to show on a page”

--- a/code/dev/parts/waf-analytics/filters/waf-filter-security-events.tpl.html
+++ b/code/dev/parts/waf-analytics/filters/waf-filter-security-events.tpl.html
@@ -28,7 +28,7 @@
       </div>
       <!-- Count per page -->
       <div class="form-group" ng-show="isShowCount">
-        <select class="form-control fixed" popover-trigger="mouseenter" uib-popover="Number of count records to report" ng-model="ngFilters.count">
+        <select class="form-control fixed" popover-trigger="mouseenter" uib-popover="Number of WAF events to show on a page" ng-model="ngFilters.count">
           <option ng-selected="ngFilters.count==25" value="25">25</option>
           <option ng-selected="ngFilters.count==50" value="50">50</option>
           <option ng-selected="ngFilters.count==100" value="100">100</option>
