--- a/code/dev/parts/signup/form-short-and-full-signup.tpl.html
+++ b/code/dev/parts/signup/form-short-and-full-signup.tpl.html
@@ -55,6 +55,15 @@
             <div ng-messages-include="parts/shared/error-messages.html"></div>
           </div>
         </div>
+        <!-- Promo Code-->
+        <div class="form-group" ng-class="{ 'has-error': newUser.promoCode.$invalid && newUser.promoCode.$dirty }">
+          <label for="promoCode" class="control-label" popover-trigger="mouseenter" uib-popover="Promo Code">Promo Code</label>
+          <input type="text" class="form-control" id="promoCode" name="promoCode" placeholder="Enter Promo Code" ng-maxlength="15"
+            ng-model="$ctrl.model.promocode" ng-pattern="NO_SPECIAL_CHARS" ng-disabled="$ctrl._loading">
+          <div class="error-messages" ng-messages="newUser.promoCode.$error" role="alert" ng-messages-multiple>
+            <div ng-messages-include="parts/shared/error-messages.html"></div>
+          </div>
+        </div>
         <div class="form-group">
           <div class="text-center text-muted" style="margin-bottom: 10px">
             By clicking on Sign Up you agree with our
@@ -75,7 +84,7 @@
         </div>
       </form>
       <!-- Full form registration -->
-      <div class="row col-xs-12 col-sm-12" ng-if="vendorConfig.enable_simplified_signup_process === false" >
+      <div class="row col-xs-12 col-sm-12" ng-if="vendorConfig.enable_simplified_signup_process === false">
         <div class="affix affix-top col-sm-offset-1 col-xs-offset-1 col-xs-11 col-sm-11 col-md-5">
           <p class="information"><strong> Discover how <em>fast</em> fast can be when accelerating your business at the edge with nuu:bit</strong></p>
           <p><strong>To Get Started:</strong></p>
@@ -137,20 +146,34 @@
                 <input type="text" class="form-control inline-block" id="lastName" name="lastName" placeholder="Last Name" ng-model="$ctrl.model.last_name"
                   required ng-maxlength="150" ng-disabled="$ctrl._loading">
                 <label for="lastName" class="text-info" popover-trigger="mouseenter" uib-popover="Last name">
-              <i class="fa fa-question-circle"></i>
-          </label>
+                <i class="fa fa-question-circle"></i>
+                </label>
                 <div ng-show="!!newUser['lastName'].$error.maxlength" style="color:red">150 characters max</div>
               </div>
             </div>
-            <div class="form-group" ng-class="{ 'has-error': newUser.phoneNumber.$invalid &&
+             <!--Promo Code -->
+            <div class="form-group" ng-class="{ 'has-error': newUser.promoCode.$invalid && newUser.promoCode.$dirty }">
+              <label for="promoCode" class="col-sm-3 control-label" popover-trigger="mouseenter" uib-popover="Promo Code">Promo Code</label>
+              <div class="col-sm-9">
+                <input type="text" class="form-control inline-block" id="promoCode" name="promoCode" placeholder="Enter Promo Code" ng-maxlength="15"
+                  ng-model="$ctrl.model.promocode" ng-pattern="NO_SPECIAL_CHARS" ng-disabled="$ctrl._loading">
+                <label for="lastName" class="text-info" popover-trigger="mouseenter" uib-popover="Last name">
+                <i class="fa fa-question-circle"></i>
+                </label>
+                <div class="error-messages" ng-messages="newUser.promoCode.$error" role="alert" ng-messages-multiple>
+                  <div ng-messages-include="parts/shared/error-messages.html"></div>
+                </div>
+              </div>
+            </div>
+            <!--<div class="form-group" ng-class="{ 'has-error': newUser.phoneNumber.$invalid &&
                             newUser.phoneNumber.$dirty }">
               <label for="phoneNumber" class="col-sm-3 control-label">Phone Number *</label>
               <div class="col-sm-9">
                 <input type="text" ng-pattern="phoneRegex" class="form-control inline-block" required id="phoneNumber" name="phoneNumber"
                   placeholder="Phone Number" ng-maxlength="30" ng-model="$ctrl.model.phone_number" ng-disabled="$ctrl._loading">
                 <label for="phoneNumber" class="text-info" popover-trigger="mouseenter" uib-popover="Contact phone number">
-              <i class="fa fa-question-circle"></i>
-          </label>
+                  <i class="fa fa-question-circle"></i>
+              </label>
                 <div ng-show="!!newUser['phoneNumber'].$error.maxlength" style="color:red">30 characters max</div>
               </div>
             </div>
@@ -168,7 +191,7 @@
               </div>
             </div>
             <hr>
-            <div class="form-group" ng-class="{ 'has-error': newUser.address1.$invalid &&
+             <div class="form-group" ng-class="{ 'has-error': newUser.address1.$invalid &&
                             newUser.address1.$dirty }">
               <label for="address1" class="col-sm-3 control-label">Address *</label>
               <div class="col-sm-9">
@@ -192,7 +215,7 @@
                 <div ng-show="!!newUser['address2'].$error.maxlength" style="color:red">150 characters max</div>
               </div>
             </div>
-            <div class="form-group" ng-class="{ 'has-error': newUser.country.$invalid &&
+             <div class="form-group" ng-class="{ 'has-error': newUser.country.$invalid &&
                             newUser.country.$dirty }">
               <label for="country" class="col-sm-3 control-label">Country *</label>
               <div class="col-sm-9">
@@ -238,8 +261,8 @@
           <i class="fa fa-question-circle"></i>
           </label>
                 <div ng-show="!!newUser['zipcode'].$error.maxlength" style="color:red">30 characters max</div>
-              </div>
-            </div>
+                </div>
+            </div>-->
             <hr>
             <div class="form-group">
               <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
