--- a/code/dev/parts/signup/form-short-and-full-signup.tpl.html
+++ b/code/dev/parts/signup/form-short-and-full-signup.tpl.html
@@ -165,6 +165,7 @@
                 </div>
               </div>
             </div>
+            <!-- NOTE: don't delete the commented code - it will be needed -->
             <!--<div class="form-group" ng-class="{ 'has-error': newUser.phoneNumber.$invalid &&
                             newUser.phoneNumber.$dirty }">
               <label for="phoneNumber" class="col-sm-3 control-label">Phone Number *</label>
