--- a/code/dev/parts/signup/form-short-and-full-signup.tpl.html
+++ b/code/dev/parts/signup/form-short-and-full-signup.tpl.html
@@ -89,11 +89,9 @@
           <p class="information"><strong> Discover how <em>fast</em> fast can be when accelerating your business at the edge with nuu:bit</strong></p>
           <p><strong>To Get Started:</strong></p>
           <ol class="list-instruction">
-            <li>Create an account, by entering your information in the form on the right. If you have a discount/promo coupon
-              you will have a chance to enter it together with payment information on a following screen.</li>
+            <li>Create an account, by entering your information and optional promo code in the form on the right.</li>
             <li>A confirmation email will be sent to the address that was initially provided.</li>
-            <li>Once received, click on the link in the email that will take you to the nuu:bit customer portal, where you’ll
-              be able to enter your payment information and any coupon codes you might have.</li>
+            <li>Once received, click on the link in the email that will take you to the nuu:bit customer portal.</li>
             <li>Then sit back and get ready to take control of the digital experience that will transform your opportunities
               at the edge.</li>
           </ol>
