--- a/code/dev/parts/reports/charts/traffic-common.html
+++ b/code/dev/parts/reports/charts/traffic-common.html
@@ -2,6 +2,7 @@
 <div class="clearfix"
      filter-time-periods
      ng-disabled="!ngDomain"
+     is-loading="_loading"
      fl-os="flOs"
      fl-country="flCountry"
      fl-device="flDevice"
