--- a/code/dev/parts/reports/filters/time-period.html
+++ b/code/dev/parts/reports/filters/time-period.html
@@ -53,8 +53,8 @@
       </div>
 
       <div class="form-group">
-        <button class="btn btn-info" ng-click="updateFilters()">
-          <i class="glyphicon glyphicon-refresh"></i>&nbsp;
+        <button class="btn btn-info" ng-click="updateFilters()" ng-disabled="ngDisabled || isLoading ">
+          <i class="glyphicon glyphicon-refresh" ng-class="isLoading?'spin':''"></i>&nbsp;
           Update Report
         </button>
       </div>
