Added proper tooltip text for ImageEngine tab

--- a/code/dev/parts/domains/edit.html
+++ b/code/dev/parts/domains/edit.html
@@ -615,7 +615,7 @@
               <hr>
             </uib-tab>
             <!-- ImageEngine-->
-            <uib-tab index="7" heading="ImageEngine" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text">
+            <uib-tab index="7" heading="ImageEngine" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="The ImageEngine feature provides a simple, automatic and transparent way to resize served images depending on maximum screen resolution of end user devices">
               <div ng-include="'parts/domains/domain-image-engine/domain-image-engine.tpl.html'"></div>
               <hr>
             </uib-tab>
