Add new validation directive - 'validate-origin-server-name-optional'

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -197,6 +197,7 @@
 <script type="text/javascript" src="js/portal/shared/validators/validate-domain-name-regular-or-wildcard.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/validators/validate-domain-name-regular-or-wildcard-domains.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/validators/validate-domain-name.directive.js"></script>
+<script type="text/javascript" src="js/portal/shared/validators/validate-origin-server-name-optional.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/validators/validate-origin-server-name.directive.js"></script>
 <script type="text/javascript" src="js/portal/shared/validators/validate-dns-record-domain-name-regular-or-wildcard-domains.directive.js"></script>
 <script type="text/javascript" src="js/portal/resources/resources.module.js"></script>
