--- a/code/dev/parts/shared/error-messages.html
+++ b/code/dev/parts/shared/error-messages.html
@@ -25,6 +25,7 @@
 <div ng-message="caching-rule-header-name" class="alert-text alert-text--caching-rule-header-name">Incorrect header-name</div>
 <!-- message for  validate-caching-rule-header-value  -->
 <div ng-message="caching-rule-header-value" class="alert-text alert-text--caching-rule-header-value">Incorrect header-value</div>
+<div ng-message="origin-server-name-optional" class="alert-text alert-text--origin-server-name-optional">Please specify either correct domain name or IPv4 address</div>
 <div ng-message="origin-server-name" class="alert-text alert-text--origin-server-name">Please specify either correct domain name or IPv4 address</div>
 <div ng-message="pattern-no-special-chars" class="alert-text alert-text--no-special-chars">Special characters are not allowed</div>
 <!-- message for validate-wildcard-domain-field  -->
